src/styles/globals.css
@import "tailwindcss";

@variant dark {
  &:where(.dark, .dark *)
}

:root {
  color-scheme: light;
}

@theme {
  --color-accent-hover: #e9c504;
  --color-accent: #ffd700;
  --color-auth-input-bg: #f2f4f8;
  --color-auth-input-border: #c1c7cd;
  --color-auth-primary: #0f62fe;
  --color-auth-surface-border: #dde1e6;
  --color-auth-text: #21272a;
  --color-black: #0a0a0a;
  --color-card-bg: #1a1a1a;
  --color-charcoal: #383232;
  --color-dark-gray: #3b3f32;
  --color-dark-green: #1a1e1d;
  --color-dark-khaki: #1f1d16;
  --color-darker-gray: #334036;
  --color-disabled: #3a3a3a;
  --color-error: #c52323;
  --color-light-gray: #f2f2f2;
  --color-medium-gray: #828282;
  --color-olive-brown: #282720;
  --color-soft-blush: #f9efec;
  --color-stroke-green: #46614f;
  --color-surface-main: #0d0d0d;
  --color-text-disabled: #5b5d5c;
  --color-warm-gray: #b3b3b2;
  --color-white: #ffffff;
  --color-admin-menu-active-background: #cbdcf5;
  --color-space: #404743;

  --background-image-section:
    linear-gradient(90deg, #0d0d0d 0%, rgba(26, 26, 26, 70%) 50%, rgba(51, 64, 54, 60%) 100%),
    linear-gradient(#1a1e1d, #1a1e1d);

  /* vacancies */
  --color-secondary-text: #e0e0e0;
  --color-surface-secondary: #1a1a1a;
  --color-vacancy-card-start: var(--color-surface-secondary);
  --color-vacancy-card-end: #1a1e1d;
  --color-vacancy-card-stroke: var(--color-stroke-green);
  --color-hover: #383232;

  --breakpoint-mobile: 23.4375rem; /* 375px */
  --breakpoint-tablet: 48rem; /* 768px */
  --breakpoint-laptop: 62rem; /* 992px */
  --breakpoint-desktop: 90rem; /* 1440px */
  --breakpoint-desktop-xl: 120rem; /* 1920 */

  --font-montserrat: Montserrat, sans-serif;
  --font-scada: var(--font-scada), sans-serif;
  --font-roboto: var(--font-roboto), sans-serif;
  --font-roboto-condensed: var(--font-robotoCondensed), sans-serif;

  --animate-fade-in: fade-in 300ms ease-out forwards;
  --animate-fade-out: fade-out 300ms ease-in forwards;
  --animate-fade-in-opacity: fade-in-opacity 300ms ease-out forwards;
  --animate-fade-out-opacity: fade-out-opacity 300ms ease-in forwards;
  --animate-marquee: marquee 30s linear infinite alternate;

  @keyframes fade-in {
    from {
      width: 0;
    }
    to {
      width: 400px;
    }
  }

  @keyframes fade-out {
    from {
      width: 400px;
    }
    to {
      width: 0;
    }
  }
  @keyframes fade-in-opacity {
    from {
      opacity: 0;
    }
    to {
      opacity: 100%;
    }
  }
  @keyframes fade-out-opacity {
    from {
      opacity: 100%;
    }
    to {
      opacity: 0;
    }
  }
  @keyframes marquee {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(-50%);
    }
  }
  --font-road-ui: var(--font-road-ui), sans-serif;
  --font-ermilov: var(--font-ermilov), sans-serif;
}

@layer base {
  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

@layer components {
  * {
    @apply font-road-ui box-border text-base font-normal text-inherit;
  }
  input {
    @apply outline-none;
  }
  .container-app {
    @apply w-full px-4 py-16;
  }
  @media (min-width: 768px) {
    .container-app {
      @apply md:px-10 md:py-25;
    }
  }

  @media (min-width: 1024px) {
    .container-app {
      @apply desktop:px-15 desktop:py-30;
    }
  }

  @media (min-width: 1440px) {
    .container-app {
      @apply px-20 py-40;
    }
  }

  @media (min-width: 1919px) {
    .container-app {
      @apply mx-auto max-w-480;
    }
  }
}

@layer utilities {
  @media (min-width: 1919px) {
    .vacancies-grid {
      grid-template-columns: repeat(4, minmax(0, 1fr));
    }
  }
}

html {
  scroll-behavior: smooth;
}

.gallery-swiper .swiper-button-next:after,
.gallery-swiper .swiper-button-prev:after {
  font-weight: 900;
}

.gallery-swiper .swiper-button-next,
.gallery-swiper .swiper-button-prev {
  transition: transform 0.2s ease-in-out;
}

@media (hover: hover) {
  .gallery-swiper .swiper-button-next:hover {
    transform: scale(1.2);
  }

  .gallery-swiper .swiper-button-prev:hover {
    transform: scale(1.2);
  }
}

